[package]
name = "beagle_glfw"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# build-dependencies are used for dependencies needed during the build process, for build scripts (build.rs).
[build-dependencies]
bindgen = "0.61.0"